TopoSortPendingGenerator: Introduce early-return in explore phase
Change-Id: Ibed040d58d14ff86d24156cb643160ea403412d8